fixed main-block size and added spacing to buttons
somone already did navbar and footer, idk who

--- a/blueprints/profile/static/profile.css
+++ b/blueprints/profile/static/profile.css
@@ -4,11 +4,11 @@
     flex-direction: row;
     justify-content: center;
     gap: 20px;
-    margin: 90px 90px 390px 190px;
+    margin: 90px 90px 290px 90px;
     width: auto;
 }
 
-.main_block{
+.main-block{
     width: 80em;
     min-height: 19.1em;
     background-color: rgb(247, 247, 247);
@@ -16,7 +16,7 @@
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-.Side_Block{
+.side-Block{
     width: 40em;
     min-height: 19.1em;
     background-color: rgb(247, 247, 247);
@@ -75,7 +75,8 @@
     justify-content: center;
 }
 
-.Transaction_List{
- 
-  
+.button-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
